# acreplay-telemetry

./: .editorconfig  .gitignore  AGENTS.md  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: cpp-cli-release.yml  cpp.yml  deploy-telemetry.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
apps/: README.md
apps/ac-telemetry/: index.html  package.json  tsconfig.json  vite.config.ts
apps/ac-telemetry/src/: App.tsx  theme.css
apps/ac-telemetry/src/components/: DropZone.tsx  LapSelector.tsx  TelemetryPanel.tsx  UplotChart.tsx
apps/ac-telemetry/src/hooks/: useReplayParser.ts
apps/ac-telemetry/src/worker/: replay.worker.ts
cpp/: .clang-format  .clang-tidy  .clangd  AGENTS.md  CMakeLists.txt  CMakePresets.json  vcpkg.json
cpp/acrp_cli/: CMakeLists.txt  main.cpp
cpp/acrp_core/: CMakeLists.txt
cpp/acrp_core/include/acrp/: api.hpp  channel_ids.hpp  csv_export.hpp  manifest.hpp  pack_format.hpp  parse_options.hpp  replay_types.hpp  status.hpp
cpp/acrp_core/src/: api.cpp
cpp/acrp_wasm/: CMakeLists.txt  exports.cpp
cpp/cmake/: CompilerWarnings.cmake  EmscriptenSettings.cmake  Sanitizers.cmake  acrpConfig.cmake.in
cpp/tests/: CMakeLists.txt  export_pack.cpp  smoke.cpp  wasm_abi.cpp
docs/: README.md  architecture.md  build-and-test.md  data-formats.md  overview.md
scripts/: lint-clangd-diagnostics.js  wasm-e2e-smoke.js  wasm-e2e-smoke.mjs  worker-api-smoke-worker.js  worker-api-smoke.js
